--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -17,16 +17,16 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.address %></td>
-        <td><%= restaurant.stars %></td>
+        <td><%= restaurant.category %></td>
         <td><%= link_to 'Show', restaurant %></td>
         <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%# <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%# <br>
+<br>
 
 <%= link_to 'New Restaurant', new_restaurant_path %>
-<%# <%= link_to 'Top', top_restaurants_path/ %> 
+<%# <%= link_to 'Top', top_restaurants_path/ %>
