--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,22 +11,21 @@
 </p>
 
 <p>
-  <strong>Stars:</strong>
+  <strong>Category:</strong>
   <%= @restaurant.category %>
 </p>
 
-<strong>Reviews:</strong>
-<ul class= "list-group">
-  <% @reviews.each do |review| %>
-   <li class="list-group-item">
-    <%= review.content %>
-    <%= link_to "Destroy", review_path(review), method: :delete %>
-   </li>
-  <% end %>
-</ul>
+<p>
+<strong>Rating:</strong>
+<% @restaurant.reviews.each do |review| %>
+<%= "#{review.content}" %>
+<%= "#{review.rating}" %>
+<% end %>
+</p>
 
 
-<%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
-<%= link_to 'Chef', chef_restaurant_path(@restaurant) %>
+
+<%= link_to 'Edit', edit_restaurant_path(@restaurant) %>
+
 <%= link_to 'New Review', new_restaurant_review_path(@restaurant) %>
